# newport-conex-agp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  pyproject.toml
docs/: conf.py  index.rst
src/stage_api/: __init__.py  __main__.py  app.py  config.py  controller.py  emulator.py  errors.py  models.py  service.py  transport.py
tests/: conftest.py  test_api.py  test_controller.py
udev/: 60-newport-stage.rules
