[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newport-stage-api"
version = "0.1.0"
description = "REST API for controlling Newport CONEX-AGP linear stages, with a protocol-level emulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyserial>=3.5",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
stage-api = "stage_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stage_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
